crates/ruff_python_parser/tests/snapshots/valid_syntax@ambiguous_lpar_with_items_if_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/ambiguous_lpar_with_items_if_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..153,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 0..28,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 5..23,
                            node_index: NodeIndex(None),
                            context_expr: If(
                                ExprIf {
                                    node_index: NodeIndex(None),
                                    range: 5..23,
                                    test: BooleanLiteral(
                                        ExprBooleanLiteral {
                                            node_index: NodeIndex(None),
                                            range: 12..16,
                                            value: true,
                                        },
                                    ),
                                    body: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 6..7,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    orelse: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 22..23,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                            pattern: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 25..28,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 25..28,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 29..71,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 34..66,
                            node_index: NodeIndex(None),
                            context_expr: If(
                                ExprIf {
                                    node_index: NodeIndex(None),
                                    range: 34..66,
                                    test: BooleanLiteral(
                                        ExprBooleanLiteral {
                                            node_index: NodeIndex(None),
                                            range: 55..59,
                                            value: true,
                                        },
                                    ),
                                    body: Generator(
                                        ExprGenerator {
                                            node_index: NodeIndex(None),
                                            range: 34..51,
                                            elt: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 35..36,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 37..50,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 41..42,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 46..50,
                                                            id: Name("iter"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: true,
                                        },
                                    ),
                                    orelse: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 65..66,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                            pattern: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 68..71,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 68..71,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 72..120,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 77..115,
                            node_index: NodeIndex(None),
                            context_expr: If(
                                ExprIf {
                                    node_index: NodeIndex(None),
                                    range: 77..115,
                                    test: BooleanLiteral(
                                        ExprBooleanLiteral {
                                            node_index: NodeIndex(None),
                                            range: 104..108,
                                            value: true,
                                        },
                                    ),
                                    body: Generator(
                                        ExprGenerator {
                                            node_index: NodeIndex(None),
                                            range: 77..100,
                                            elt: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 78..79,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 80..99,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 90..91,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 95..99,
                                                            id: Name("iter"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: true,
                                                },
                                            ],
                                            parenthesized: true,
                                        },
                                    ),
                                    orelse: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 114..115,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                            pattern: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 117..120,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 117..120,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 121..152,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 126..147,
                            node_index: NodeIndex(None),
                            context_expr: If(
                                ExprIf {
                                    node_index: NodeIndex(None),
                                    range: 126..147,
                                    test: BooleanLiteral(
                                        ExprBooleanLiteral {
                                            node_index: NodeIndex(None),
                                            range: 136..140,
                                            value: true,
                                        },
                                    ),
                                    body: Subscript(
                                        ExprSubscript {
                                            node_index: NodeIndex(None),
                                            range: 126..132,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 127..128,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            slice: NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 130..131,
                                                    value: Int(
                                                        0,
                                                    ),
                                                },
                                            ),
                                            ctx: Load,
                                            is_typeof: false,
                                            is_type_decoration: false,
                                        },
                                    ),
                                    orelse: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 146..147,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            optional_vars: None,
                            pattern: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 149..152,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 149..152,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
