crates/ruff_python_parser/tests/snapshots/valid_syntax@ann_assign_stmt_simple_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/ann_assign_stmt_simple_target.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..45,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 0..6,
                    decorator_list: [],
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..1,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 3..6,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 17..25,
                    decorator_list: [],
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 18..19,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 22..25,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 26..34,
                    decorator_list: [],
                    target: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(None),
                            range: 26..29,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 26..27,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: Name("b"),
                                range: 28..29,
                                node_index: NodeIndex(None),
                            },
                            ctx: Store,
                            optional: false,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 31..34,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 35..44,
                    decorator_list: [],
                    target: Subscript(
                        ExprSubscript {
                            node_index: NodeIndex(None),
                            range: 35..39,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 35..36,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            slice: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 37..38,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            ctx: Store,
                            is_typeof: false,
                            is_type_decoration: false,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 41..44,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
        ],
    },
)
```
